# h265web.js

./: .babelrc  .gitignore  .index.html.swp  .npmignore  LICENSE-Free_CN.MD  LICENSE.txt  QUESTION_GUIDE_CH.md  QUESTION_GUIDE_EN.md  README.MD  README_CN.MD  README_EN.MD  README_ZH.MD  Remind:first_step:copy_dist_dir_to_example_dist_path  bin_createts.sh  build.sh  compile  consts.js  demo.css  demo.html  demo.js  gulpfile.js  h265webjs-v20210518.js  h265webjs.js  index-cn.html  index-debug.html  index.css  index.html  index.js  index265.html  index265WS-old.html  index265aac.html  index265aacWS.html  indexMp4.html  init.sh  missile.wasm  missilets.wasm  package-lock.json  package.json  play.js  player.js  (+5 more)
DOCS/: README-HowToUse-CN.MD  README-HowToUse.MD
VideoMissileServerDemo/: kill.sh  main_server_ws.py
decoder/: audio.js  hevc-header.js  missile.wasm  player-core.js
demo/: README.MD  index.html  pack.js  package.json  play.js  screen.js
demuxer/: buffer.js  m3u8-parser.js  m3u8.js  m3u8base.js  missilets.wasm  mp4.js  ts.js
dist-multi-thread/: h265webjs-v20220701.js  h265webjs-v20220706.js  h265webjs-v20220712.js  h265webjs-v20220824.js  h265webjs-v20220912.js  h265webjs-v20220916.js  h265webjs-v20221022.js  h265webjs-v20221102.js  h265webjs-v20221106.js  index.js  missile-multi-thread-v20220623.js  missile-multi-thread-v20220701.fetch.js  (+5 more)
example/: index.html  (+4 more)
src/src-wasm/: .gitignore  CMakeLists.txt  README.MD  about.c  about.h  compile-120func.sh  compile-256mb.sh  compile-512mb.sh  compile-allcodec  compile-multi-thread.sh  compile-simd.sh  compile.all.sh  compile.sh  main.c  main_test.c  missile-multi-thread-v20221106.fetch.js  seek_desc.c  seek_desc.h  sniff_g711core.c  sniff_g711core.h  sniff_httpflv.c  sniff_httpflv.h  sniff_remux_mpeg4.c  sniff_remux_mpeg4.h  sniff_stream.c  sniff_stream.h  ts_parser.c  ts_parser.h  vcodec.c  vcodec.h  version.sh  web.c  web.h  web_capi.c  web_capi.h  web_wasm.c
src/src-wasm/decoder/: aac.c  aac.h  avc.c  avc.h  const_codec.h  hevc.c  hevc.h
src/src-wasm/utils/: av_dec_linklist.c  av_dec_linklist.h  av_err_code.c  av_err_code.h  common_av.c  common_av.h  common_string.c  common_string.h  md5.c  md5.h  secret.c  secret.h  tools.c  tools.h  ts_utils.c  ts_utils.h
(+275 files in other folders)
